--- a/exercicios/desafio10site/dea.html
+++ b/exercicios/desafio10site/dea.html
@@ -55,7 +55,8 @@
                 <img src="imagens-videos/Gm Origin.png" alt="gg">
             </picture>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita iusto cupiditate, nesciunt omnis reprehenderit asperiores culpa facere cum aliquam eius odit vitae sint corrupti non itaque aperiam molestias praesentium rem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur neque ab totam quas, deserunt facere corrupti, ipsa provident architecto dolorem alias libero molestias sit, quidem optio doloribus magnam vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. A mollitia velit ad, aliquid minima ipsam asperiores, inventore ea quas sunt nihil facere voluptate! Accusantium quae velit omnis ab consequuntur eius!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita iusto cupiditate, nesciunt omnis reprehenderit asperiores culpa facere cum aliquam eius odit vitae sint corrupti non itaque aperiam molestias praesentium rem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum consequuntur neque ab totam quas, deserunt facere corrupti, ipsa provident architecto dolorem alias libero molestias sit, quidem optio doloribus magnam vitae? Lorem ipsum dolor sit amet consectetur adipisicing elit. A mollitia velit ad, aliquid minima ipsam asperiores, inventore ea quas sunt nihil facere voluptate! Accusantium quae velit omnis ab consequuntur eius! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, adipisci deleniti. Maxime in unde illum facere nostrum dolorum libero! Quaerat dolores unde deserunt ratione illum assumenda deleniti consectetur voluptas maxime?
+            </p>
 
 
             <h2>2015 momento de vloger</h2>
